# python-krunner

./: CMakeLists.txt  README.md  a.py  b.py  config.py  plasma-runner-pyrunner-a.desktop  plasma-runner-pyrunner-b.desktop  setup.py
example-homefiles/: CMakeLists.txt  README.md  homefiles.py  plasma-runner-homefiles-py.desktop
src/: convert-krunner.hpp  krunner.py  pyrunner.cpp  pyrunner.hpp  python-krunner-conf.hpp.in  python-krunner.cpp  python-krunner.hpp
src/sip/: abstractrunner.sip  kconfig.sip  kconfigbase.sip  kconfiggroup.sip  krunner.sip  querymatch.sip  runnercontext.sip  runnersyntax.sip
